mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb #ref for deployment
  ports:
    - protocol: TCP
      port: 27017 # serivce port
      targetPort: 27017 # container port of deployment docker container du port
